# Text-compression

./: CMakeLists.txt  README.md
src/: BWTCoder.cpp  BWTCoder.h  BWT_MTF_RLE_Huffman_Coder.cpp  BWT_MTF_RLE_Huffman_Coder.h  BlockCoder.h  Coder.cpp  Coder.h  HuffmanCoder.cpp  HuffmanCoder.h  HuffmanTree.cpp  HuffmanTree.h  MTFCoder.cpp  MTFCoder.h  RLE0Coder.cpp  RLE0Coder.h  StreamCoder.cpp  StreamCoder.h  main.cpp
